--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,70 @@
-body { background: url(../images/backgroundimage.png);
-		min-height: 100%;
-		min-width: 100%;
-		background-size: 100%;
-		background-repeat: no-repeat;
-
+body { 
+	height: 100%;	
+	font-size: 18px;
 }
 
-.content{
-
-    padding-top: 300px;
-
+.content-wrap {
+	background: url(../images/backgroundimage.png) no-repeat center;
+	background-size: cover;
+	min-height: 100vh;
+}
+.content-container {
+	color:#fff;
+	margin-top: 13%;
+	background-color: rgba(0,0,0,.8);
+	padding: 3% 5%;
+}
+h1 {
+font-family: 'Faster One', cursive;
+font-size: 5em;
+}
+#heading {
+	background-color: rgba(139,0,0, .95);
+    color: #fff;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+}
+#heading h2 {
+	margin-top: 0;
+}
+h1 {
+	margin-bottom: 2%;
+}
+#welcome p {
+ 	margin-bottom: 5%;
+ }
+#startGame {
+	margin:3% 1%;
+	background: transparent;
+    border: 1px solid #8B0000;
+    padding: 10px 20px;
+    font-size: 28px;
+    text-transform: uppercase;
+    border-radius: 10px;
 }
 
+#startGame:hover {
+	background: #8B0000;
+}
+
+button:focus {
+    outline:none;
+}
+
+.qGrp {
+	border-bottom: 1px solid #fff;
+	padding: 5px 0 40px;
+}
+.options {
+	background: transparent;
+    border: 1px solid #337ab7;
+    padding: 10px 20px;
+    font-size: 28px;
+    text-transform: uppercase;
+    border-radius: 10px;
+}
+.options:hover, .selected {
+	background: #337ab7;
+}
